--- a/plugins/Default/web/Default.pug
+++ b/plugins/Default/web/Default.pug
@@ -1,9 +1,9 @@
-extends ../dashboard.pug
+extends ../../dashboard.pug
 
 block style
     link(rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css")
     style
-        include null.css
+        include default.css
 
 block pluginContent
-    p test
+    p default
