--- a/static/css/topbar.css
+++ b/static/css/topbar.css
@@ -6,7 +6,7 @@
     padding-left: 20px;
     padding-top: 10px;
     display: grid;
-    grid-template-columns: auto auto 170px;
+    grid-template-columns: auto auto 300px;
 }
 
 .topbar #title {
@@ -25,7 +25,7 @@
     font-size: 1.5em;
     text-decoration: none;
     color: white;
-    font-width: 50px;
+    line-height: 50px;
     padding-left: 20px;
     padding-bottom: 10px;
     cursor: pointer;
@@ -36,5 +36,8 @@
 }
 
 .topbar #login img {
+    display: inline-block;
+    vertical-align: middle;
     border-radius: 50%;
+    margin-right: 20px;
 }
