--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ html
             h1 Automate Your Discord Server
             h2 Have a dynamic bot with just the features you want.
             .inline
-                a(id="add", href="/add") 
+                a(id="add", href="https://discordapp.com/api/oauth2/authorize?client_id=520769818870415380&scope=bot&permissions=8" target="_blank")
                     img(src= "/static/images/discord.png" height= "50px" width= "50px")
                     ="Add to Discord"
                 a(id="features", href="/features") See Features
