--- a/views/plugins/GameRole.pug
+++ b/views/plugins/GameRole.pug
@@ -3,7 +3,7 @@ extends ../dashboard.pug
 block style
     link(rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css")
     style
-        include Default.css
+        include GameRole.css
 
 block pluginContent
     p(class= "description") 
