--- a/views/plugins/null.css
+++ b/views/plugins/null.css
@@ -2,13 +2,30 @@
     margin-top: 20px;
 }
 
+.prefix {
+    display: inline-block;
+    background-color: #5C5C5C;
+    margin: 30px 20px 0px;
+    padding: 20px;
+    width: 205px;
+    color: white;
+}
+
+.prefix input {
+    border-radius: 10px;
+    background-color: #888888;
+    border-style: none;
+    padding: 5px;
+}
+
 .plugin {
     display: inline-block;
     background-color: #5C5C5C;
-    margin: 30px;
+    margin: 30px 20px 0px;
     padding: 20px;
     width: 205px;
 }
+
 
 .plugin a {
     padding-left: 10px;
