--- a/views/plugins/Default.pug
+++ b/views/plugins/Default.pug
@@ -5,6 +5,8 @@ block style
     style
         include Default.css
 
+block description
+    p the default and neccecairy commands to manage the bot from within the server.
+
 block pluginContent
-    p(class= "description") 
     
