--- a/views/plugins/GameRole.pug
+++ b/views/plugins/GameRole.pug
@@ -5,6 +5,8 @@ block style
     style
         include GameRole.css
 
+block description
+    p a plugin allowing users to react to a message to gain roles.
+
 block pluginContent
-    p(class= "description") 
     
