--- a/views/plugins/LookingForPlayers.pug
+++ b/views/plugins/LookingForPlayers.pug
@@ -5,6 +5,8 @@ block style
     style
         include LookingForPlayers.css
 
+block description
+    p A plugin that dynamically creates voice channels within a category to allow for a less cluttered server.
+
 block pluginContent
-    p(class= "description") 
     
