--- a/views/plugins/SecretPhrase.pug
+++ b/views/plugins/SecretPhrase.pug
@@ -5,6 +5,8 @@ block style
     style
         include SecretPhrase.css
 
+block description
+    p if the user types a secret phrase, they gain an associated role, this can be used for accepting server rules and stuff like that.
+
 block pluginContent
-    p(class= "description") 
     
