--- a/views/plugins/StreamingRole.pug
+++ b/views/plugins/StreamingRole.pug
@@ -5,6 +5,8 @@ block style
     style
         include StreamingRole.css
 
+block description
+    p give users a role while they're streaming.
+
 block pluginContent
-    p(class= "description") 
     
