--- a/views/plugins/Weather.pug
+++ b/views/plugins/Weather.pug
@@ -5,6 +5,10 @@ block style
     style
         include Weather.css
 
+block description
+    p a weather command. get the weather. command provided by
+        a(href="https://www.msn.com/en-us/Weather/") msn
+        ="."
+
 block pluginContent
-    p(class= "description") 
     
