--- a/views/plugins/null.pug
+++ b/views/plugins/null.pug
@@ -5,6 +5,9 @@ block style
     style
         include null.css
 
+block description
+    p here are all of the bot's plugins and the server's prefix.
+
 block pluginContent
     .plugins
         .prefix Prefix: 
