--- a/static/css/topbar.css
+++ b/static/css/topbar.css
@@ -6,17 +6,23 @@
     padding-left: 20px;
     padding-top: 10px;
     display: grid;
-    grid-template-columns: auto auto 300px;
+    grid-template-columns: 300px auto 300px;
 }
 
 .topbar #title {
-    display: inline;
+    display: inline-block;
     margin: 0px;
     font-size: 2em;
     color: white;
     text-decoration: none;
     line-height: 50px;
     cursor: pointer;
+}
+
+.topbar #guildLength {
+    display: inline-block;
+    line-height: 50px;
+    text-align: center;
 }
 
 .topbar #login {
