--- a/views/global/topbar.pug
+++ b/views/global/topbar.pug
@@ -1,8 +1,7 @@
 .topbar
-    a(href="/")
-        #title
+    a(href="/" id="title")
             b Quality Bot
-    div
+    #guildLength= `Serving ${guildLength} guilds.`
     a(id="login" href=loginStatus ? "/dashboard" : "/login")
         if loginStatus
             img(src=`${userAvatar}` width='50px', height='50px')
