--- a/views/plugins/AdvancedInfo.pug
+++ b/views/plugins/AdvancedInfo.pug
@@ -5,6 +5,8 @@ block style
     style
         include AdvancedInfo.css
 
+block description
+    p commands reveal certain behind the covers parts of discord, such as the id's of roles.
+
 block pluginContent
-    p(class= "description") 
     
