--- a/views/plugins/MemberRank.pug
+++ b/views/plugins/MemberRank.pug
@@ -3,12 +3,10 @@ extends ../dashboard.pug
 block style
     link(rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css")
     style
-        include Weather.css
+        include MemberRank.css
 
 block description
-    p A weather command. Get the weather. Command data provided by 
-        a(href="https://www.msn.com/en-us/Weather/") msn
-        ="."
+    p [WIP] A plugin that rewards xp for messages. 
 
 block pluginContent
     
