Moderation Tools & website
new plugin and new website domain

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,6 @@ html
                 a(id="add", href="https://discordapp.com/api/oauth2/authorize?client_id=520769818870415380&scope=bot&permissions=8" target="_blank")
                     img(src= "/static/images/discord.png" height= "50px" width= "50px")
                     ="Add to Discord"
-                a(id="features", href="/features") See Features
+                a(id="features", href="https://discord.gg/UCP6pnf") See Features
         include global/footer.pug
         script(src= "/static/js/index.js")
