--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ html
             .inline
                 a(id="add", href="https://discordapp.com/api/oauth2/authorize?client_id=520769818870415380&scope=bot&permissions=8" target="_blank")
                     img(src= "/static/images/discord.png" height= "50px" width= "50px")
-                    ="Add to Discord"
-                a(id="features", href="https://discord.gg/UCP6pnf") See Features
+                    | Add to Discord
+            iframe(src="https://discordapp.com/widget?id=646759800050286612&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0")
         include global/footer.pug
         script(src= "/static/js/index.js")
